--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright (C) 2025 David Sugar <tychosoft@gmail.com>
 
 cmake_minimum_required(VERSION 3.16.0)
-Project(minicrypt VERSION 0.1.5 LANGUAGES C)
+Project(minicrypt VERSION 0.2.0 LANGUAGES C)
 set(CMAKE_C_STANDARD 11)
 set(C_STANDARD_REQUIRED 11)
 
@@ -65,6 +65,10 @@ target_link_libraries(test_random PRIVATE minicrypt)
 add_executable(test_crc test/crc.c src/crc.h)
 add_test(NAME test-crc COMMAND test_crc)
 target_link_libraries(test_crc PRIVATE minicrypt)
+
+add_executable(test_ring256 test/ring256.c src/ring256.h)
+add_test(NAME test-ring256 COMMAND test_ring256)
+target_link_libraries(test_ring256 PRIVATE minicrypt)
 
 # Extras...
 add_custom_target(header-files SOURCES ${headers})
